# neural-net-path-tracer

./: .gitmodules  README.md  Summit_PAVE_tdlr.txt
DeepIllumination/: __init__.py  data.py  model.py  test.py  train.py  util.py
generative_tracer/: __init__.py  compute_conditional_augmentors.py  model.py  path_tracer_vtkm.py
generative_tracer/utils/: conditional_augmentors.py
path_tracer/raytracingtherestofyourlife/: CMakeLists.txt  CanvasRayTracer.cxx  Cornell Box.ipynb  CornellBox.cpp  CornellBox.h  MapperPathTracer.cxx  MapperPathTracer.h  MapperQuad.cxx  MapperQuad.h  MapperQuadAlbedo.cxx  MapperQuadNormals.cxx  MapperQuadNormals.h  View3D.cxx  environment.yml  main.cc  mapperquadalbedo.h  trainingTracer.cxx
path_tracer/raytracingtherestofyourlife/build_2/: playground.py
path_tracer/raytracingtherestofyourlife/pathtracing/: AABBSurface.h  BVHTraverser.h  Camera.cxx  Camera.h  CosineGenerateDir.h  EmitWorklet.h  GenerateDir.h  PathAlgorithms.h  PathTracer.cxx  PathTracer.h  Pdf.h  PdfWorklet.h  QuadGenerateDir.h  QuadIntersector.cxx  QuadIntersector.h  QuadPdf.h  RayOperations.h  Record.h  ScatterWorklet.h  SphereExtractor.cxx  SphereGenerateDir.h  SphereIntersector.cxx  SphereIntersector.h  SpherePdf.h  Surface.h  SurfaceWorklets.h  WhichGenerateDir.cxx  WhichGenerateDir.h  Worklets.h  onb.h  vec3.h  wangXor.h
path_tracer/raytracingtherestofyourlife/pybind11/: CMakeLists.txt
path_tracer/raytracingtherestofyourlife/raytracing/: OrigQuadIntersector.cxx  OrigQuadIntersector.h  RayTracerAlbedo.cxx  RayTracerAlbedo.h  RayTracerNormals.cxx  RayTracerNormals.h  raytraceralbedo.h
